--- a/res/values/lmodroid_config.xml
+++ b/res/values/lmodroid_config.xml
@@ -15,12 +15,5 @@
 -->
 
 <resources>
-    <string name="fit_strategy">Fit strategy</string>
-    <string name="fit_strategy_as_previewed">As previewed</string>
-    <string name="fit_strategy_high_quality">High quality</string>
-    <string name="fit_strategy_center">Center</string>
-    <string name="fit_strategy_crop">Crop</string>
-    <string name="fit_strategy_stretch">Stretch</string>
-    <string name="fit_strategy_texture">Texture</string>
-    <string name="extra_credit_hint">Click here to find <b>more wallpapers</b> by this creator!</string>
+    <bool name="show_extra_credit_hint">true</bool>
 </resources>
